--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-is": "^18.3.1",
-    "recharts": "^2.12.7"
+    "react-is": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,7 +22,8 @@
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
+    "recharts": "2.13.0-alpha.5",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
